[gd_scene load_steps=10 format=2]

[ext_resource path="res://SelectiveGlowWorldEnvironment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Camera/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/StartUp/GodotSplash/GodotLogoStartup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/StartUp/GodotSplash/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/StartUp/GodotSplash/GodotStartupScreen.gd" type="Script" id=5]
[ext_resource path="res://Scenes/StartUp/GodotSplash/FlickeringLightSound.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="GodotStartupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SelectiveGlowWorldEnvironment" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
boot_up = true

[node name="LightFlickeringSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1.15, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotAnimatedSprite" parent="Control" instance=ExtResource( 3 )]
modulate = Color( 1.1, 1.1, 1.2, 1 )
position = Vector2( 160, 160 )

[node name="Made" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -48.0
margin_right = -3.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MADE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="With" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -48.0
margin_right = 69.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "With"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godot" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = 32.0
margin_right = 41.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "godot"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ChangeSceneTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.3
one_shot = true

[node name="BlockingColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTween" type="Tween" parent="."]
[connection signal="animation_finished" from="Control/GodotAnimatedSprite" to="." method="_on_GodotAnimatedSprite_animation_finished"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
[connection signal="tween_all_completed" from="StartTween" to="." method="_on_StartTween_tween_all_completed"]
